<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/iconlogo1"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:contentDescription="@string/content_description_image_eParking" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createByTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginToUrParking"
                android:id="@+id/loginText"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="20dp"
                android:textColor="@color/blue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/user"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="4dp"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@color/blue"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/createByTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SMK_NEGERI_4_TANJUNGPINANG"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/createByTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
